<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ScaleObject"
    android:orientation="vertical"
    android:nestedScrollingEnabled="false"
    android:clickable="true"
    android:background="#003399">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_text"
        android:id="@+id/titleText"
        android:textColor="#ffffffff"
        android:textSize="34sp"
        android:textIsSelectable="false" />
<RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


    <RadioButton
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/radioButton_meters"
        android:id="@+id/radioButton_meters"
        android:textColor="#ffffffff"
        android:layout_marginTop="100dp"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButton_English"
        android:id="@+id/radioButton_English"
        android:textColor="#ffffffff"
        android:clickable="true" />
</RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText_meters"
            android:layout_marginTop="50dp"
            android:text="@string/editText_meters"
            android:textColor="#ffffffff"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="m"
            android:id="@+id/meterUnits"
            android:layout_gravity="bottom"
            android:textColor="#ffffffff"
            android:visibility="invisible"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText_centimeters"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:textColor="#ffffffff"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="cm"
            android:id="@+id/centimeterUnits"
            android:layout_gravity="bottom"
            android:textColor="#ffffffff"
            android:visibility="invisible"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText_feet"
            android:text="@string/editText_feet"
            android:textColor="#ffffffff"
            android:visibility="invisible"
            android:layout_gravity="bottom|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="ft"
            android:id="@+id/feetUnits"
            android:layout_gravity="bottom"
            android:textColor="#ffffffff"
            android:visibility="invisible" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_inches"
                android:text="@string/editText_inches"
                android:textColor="#ffffffff"
                android:visibility="invisible"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="in"
            android:id="@+id/inchesUnits"
            android:layout_gravity="bottom"
            android:textColor="#ffffffff"
            android:visibility="invisible" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nextText"
        android:id="@+id/nextText"
        android:layout_gravity="right"
        android:textColor="#ffffffff"
        android:textSize="25sp" />

</LinearLayout>
